--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,19 +12,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".oldschool.OldSchoolActivity"
+        <activity
+            android:name=".oldschool.OldSchoolActivity"
             android:label="Old School Data Binding"
-            android:launchMode="singleInstance"
-            >
+            android:launchMode="singleInstance">
         </activity>
-
-        <activity android:name=".butterknife.ButterKnifeActivity"
+        <activity
+            android:name=".butterknife.ButterKnifeActivity"
             android:label="Butter Knife Data Binding"
             android:launchMode="singleInstance">
         </activity>
-
-        <activity android:name=".newschool.DataBindingActivity"
+        <activity
+            android:name=".newschool.DataBindingActivity"
             android:label="New Data Binding"
             android:launchMode="singleInstance">
             <intent-filter>
@@ -32,6 +31,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.example.databinding.IncludeLayoutActivity"
+            android:label="DataBinding with layout include">
         </activity>
     </application>
 
